2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	rewrite file info construction and directory listing. It should now
	correctly resolve symlinks and be fast enough for general use.

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (do_enumerate):
	Better error message for Nokia 3650 phones

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (_get_icon_from_type),
	(_get_type_from_class), (_is_nokia_3650), (_get_device_properties),
	(g_vfs_backend_obexftp_finalize), (do_mount), (do_open_for_read),
	(do_query_info), (do_query_fs_info), (do_enumerate), (do_delete):
	Error out cleanly from do_mount() if we somehow lose connection
	to the device, Show a meaningful error when browsing broken
	Nokia 3650 phones (Closes: #519733)

2008-03-05  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.c:
        (ask_password_reply):
	Always set password to non-NULL, but keep
	user/domain as NULL if not specified by user.
	Fixes #520317 (smb auth crash)
	
2008-03-05  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        (g_daemon_mount_eject_finish):
	Initialize drive variable not access
	undefined memory (#520388)

2008-03-04  A. Walton  <awalton@svn.gnome.org>

	* daemon/ParseFTPList.c (ParseFTPList):
	Trivial C89 patch, fixes #520339. 
	Patch from Jens Granseuer.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	set the right GError here. Makes gvfsd-ftp run fine manually again.

2008-03-04  Benjamin Otte  <otte@gnome.org>

	* common/gmountspec.c: (g_mount_spec_set_with_len):
	add g_return_if_fail here - I had SEGVs sometime later due to values
	being NULL here. So better catch em early

2008-03-04  Sebastien Bacher  <seb128@ubuntu.com>

	* configure.ac: New version update
		
=== gvfs 0.1.11 ===

2008-03-04  Sebastien Bacher  <seb128@ubuntu.com>

	* NEWS: Update for 0.1.11
